Fix tooltips for nature icons on mobile views

--- a/style.css
+++ b/style.css
@@ -1046,7 +1046,7 @@
       content: "";
       width: 0;
       height: 0;
-      top: 75%;
+      top: 80%;
       left: 40%;
       border-top: 12px solid transparent;
       border-bottom: 12px solid transparent;
